k8s/stage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ammo-deployment
  labels:
    app: ammo
  namespace: tekst-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ammo
  template:
    metadata:
      labels:
        app: ammo
    spec:
      containers:
        - name: ammo
          image: <image>
          ports:
            - name: app-port
              containerPort: 3000
          imagePullPolicy: Always
