k8s/stage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ammo-service
spec:
  ports:
    - port: 80
      name: http
      targetPort: 3000
  selector:
    app: ammo
  type: ClusterIP
