k8s/stage/ammo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ammo
  labels:
    app: ammo
  namespace: tekst-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ammo
  template:
    metadata:
      labels:
        app: ammo
    spec:
      containers:
        - name: ammo
          image: <harbor_url>/tekst/ammo:<version>
          ports:
            - name: app-port
              containerPort: 3000
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: ammo-service
spec:
  ports:
    - port: 80
      name: http
      targetPort: 3000
  selector:
    app: ammo
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ammo-ingress
  namespace: tekst-stage
spec:
  rules:
    - host: <host_url>
      http:
        paths:
          - path: /ammo
            pathType: Prefix
            backend:
              service:
                name: ammo-service
                port:
                  number: 80
