k8s/stage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ammo-ingress
  namespace: tekst-stage
spec:
  rules:
    - host: <host_url>
      http:
        paths:
          - path: /ammo
            pathType: Prefix
            backend:
              service:
                name: ammo-service
                port:
                  number: 80
